# AutoNav_25-26

./: .gitignore  .gitmodules
env/docker/: .dockerignore  build_koopa-dev.sh  entrypoint.sh  run-container.sh
env/docker/dockerfiles/: Dockerfile  Dockerfile.base
env/docker/entrypoint_additions/: customize.sh
env/docker/scripts/: zed_install_fixed.sh
isaac_ros-dev/: .gitignore
isaac_ros-dev/src/: .gitignore
isaac_ros-dev/src/autonav_automated_testing/: CMakeLists.txt  README.md  build.sh  package.xml  plugin.xml  setup.py
isaac_ros-dev/src/autonav_automated_testing/config/: testing_data_collection_setter.yaml
isaac_ros-dev/src/autonav_automated_testing/include/autonav_automated_testing/: autonav_automated_testing_plugin.hpp
isaac_ros-dev/src/autonav_automated_testing/launch/: automated_testing.launch.py  automated_testing_rqt_plugin.py  t001_GPS_Cal.launch.py  t002_Line_Comp.launch.py  t003_Forward_Move.launch.py  t004_Obj_Detect.launch.py  t005_Path_Plan.launch.py  t006_Simulation.launch.py  t007_Speed.launch.py  t007_Speed_Cal.launch.py  t008_Acceleration.launch.py  t009_Rotation.launch.py  t010_Steering_Drift.launch.py  t011_Incline_Performance.launch.py
isaac_ros-dev/src/autonav_automated_testing/src/: autonav_automated_testing_plugin.cpp  data_publisher.cpp
isaac_ros-dev/src/autonav_automated_testing/src/automaters/: base_automater.py  t001_automater.py  t002_automater.py  t003_automater.py  t004_automater.py  t005_automater.py  t006_automater.py  t007_automater.py  t008_automater.py  t009_automater.py  t010_automater.py  t011_automater.py
isaac_ros-dev/src/autonav_automated_testing/src/automators/: base_automator.py  t001_automator.py  t002_automator.py  t003_automator.py  t004_automator.py  t005_automator.py  t006_automator.py  t007_automator.py  t008_automator.py  t009_automator.py  t010_automator.py  t011_automator.py
isaac_ros-dev/src/bringup/launch/: bringup.launch.py  sensors.launch.py
isaac_ros-dev/src/control/src/: control.cpp  motor_controller.cpp  motor_controller.hpp
isaac_ros-dev/src/gps_waypoint_handler/: package.xml
isaac_ros-dev/src/line_detection/: CMakeLists.txt
isaac_ros-dev/src/line_detection/src/: detection.cpp  node.cpp
isaac_ros-dev/src/odom_handler/src/: wheel_odom_pub.cpp
scripts/: encoder_speed_test.py
scripts/automatic_testing/: t001_automater.py  t002_automater.py  t003_automater.py  t004_automater.py  t005_automater.py  t006_automater.py  t007_automater.py  t008_automater.py  t009_automater.py  t010_automater.py  t011_automater.py
