<?xml version="1.0"?>
<package format="3">
  <name>autonav_automated_testing</name>
  <version>0.1.0</version>
  <description>Automated Testing RQt Plugin for ROS2 Humble</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Core dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>setuptools</buildtool_depend>

  <!-- RQt GUI dependencies (Qt bindings included with ROS2 Humble) -->
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>python_qt_binding</exec_depend>

  <!-- ROS 2 launch system -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Ament dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <!-- Register rqt plugin -->
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>